# prism-ai

./: .gitignore  PORTFOLIO_SUMMARY.md  README.md  RELEASE_NOTES.md  RESEARCH_PAPER.md  app.py  pyproject.toml
.github/workflows/: python-package-conda.yml  python-package.yml  python-publish.yml
examples/: history.json
prism/: __init__.py  cli.py
prism/adapter/: prompt_injector.py
prism/data/: hf_loader.py
prism/extractor/: uiv_builder.py
prism/metrics/: clarification.py  drift.py  evaluation.py  telemetry.py
prism/providers/: __init__.py  anthropic.py  gemini.py  openai.py  utils.py
prism/storage/: __init__.py  base.py  json_store.py
prism_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: 01_evaluate_lmsys.py
tests/: test_core.py  test_drift.py  test_evaluation.py  test_providers.py  test_storage.py  test_telemetry.py
