[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-ai"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "PRISM: Predicting Response Intent from Session Memory"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets",
    "pandas",
    "numpy",
    "transformers",
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/prism-ai"
"Bug Tracker" = "https://github.com/yourusername/prism-ai/issues"

[project.scripts]
prism = "prism.cli:main"
